# lazarevic_project_2

./: .gitignore  README.md  changelog.org  meson.build  meson_options.txt
doc/: literatur.bib  main.tex
doc/json/: cars.json
include/: car.h  enums.h  street.h  trafficlights.h  util.h
log/: log_2021-03-15.txt
src/: car.cpp  main.cpp  street.cpp  trafficlight.cpp  util.cpp
