option('asio_include_dir', type : 'string', value : '/Users/valentinolazarevic/Desktop/asio-1.18.1/include', description : 'the include dir of asio')
option('cli11_include_dir', type : 'string', value : '/Users/valentinolazarevic/Documents/Libs', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/Users/valentinolazarevic/Documents/Libs', description : 'the include dir of json')
option('rang_include_dir', type : 'string', value : '/Users/valentinolazarevic/Documents/Libs', description : 'the dir containing rang.hpp')
option('spdlog_include_dir', type : 'string', value : '/Users/valentinolazarevic/Documents/Libs', description : 'the include dir of spdlog')
